<resources>
    <string name="app_name">LevelUs</string>
    <string name="about">About</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="favorite">Favorite</string>
    <string name="local">Local</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="some_id">비번 생각 안남?</string>
    <string name="log_out">Log Out</string>
    <string name="quest_list">Quest List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_info">내 정보</string>
</resources>