<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">
    <RelativeLayout
        android:id="@+id/page_header"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="16dp">
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|top"
            android:text="Edit_info"
            android:textAppearance="@style/big_black_title" />
    </RelativeLayout>
    <EditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/name"
        android:paddingLeft="16dp">
    </EditText>
    <EditText
        android:id="@+id/input_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="236dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/input_age"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="302dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/age"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/input_favorite"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="368dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/favorite"
        android:padding="16dp"/>
    <EditText
        android:id="@+id/input_local"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="434dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/local"
        android:paddingLeft="16dp"/>
    <Button
        android:id="@+id/button_edit"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="153dp"
        android:background="@drawable/button_prim"
        android:text="Edit"
        android:textColor="#ffffff"/>
</RelativeLayout>