<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:id="@+id/page_header"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp">
        <TextView
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/log_in"
            android:textAppearance="@style/big_black_title"
            android:gravity="center_horizontal|top"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/input_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"/>
    <TextView
        android:layout_width="105dp"
        android:layout_height="19dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="469dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:gravity="top"/>
    <Button
        android:id="@+id/button_log_in"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="302dp"
        android:background="@drawable/button_prim"
        android:text="@string/log_in"
        android:textColor="#ffffff"/>

</RelativeLayout>